--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -2,6 +2,7 @@
 <!-- 公共的底部页面 -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="foot">
+    <script th:src="@{/js/tool.js}" ></script>
     <script th:src="@{/jquery/jquery-3.3.1.js}" ></script>
     <script th:src="@{/bootstrap-4.0.0-dist/js/bootstrap.bundle.min.js}" ></script>
 </div>
