--- a/src/main/resources/templates/bam/login.html
+++ b/src/main/resources/templates/bam/login.html
@@ -80,7 +80,7 @@
                     <p>
                         Sign In to your account</p>
                 </div>
-                <form action="login.do" method="post">
+                <form action="/login" method="post">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="username" autofocus>
                     </div>
