--- a/src/main/resources/templates/bam/login.html
+++ b/src/main/resources/templates/bam/login.html
@@ -80,12 +80,12 @@
                     <p>
                         Sign In to your account</p>
                 </div>
-                <form action="/login" method="post">
+                <form th:action="@{/login}" method="post">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="username" autofocus>
+                        <input type="text" class="form-control" name="username" placeholder="username" autofocus>
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" placeholder="password">
+                        <input type="password" name="password" class="form-control" placeholder="password">
                     </div>
                     <div class="checkbox pad-btm text-left">
                         <input id="demo-form-checkbox" class="magic-checkbox" type="checkbox">
