--- a/src/main/resources/templates/bam/bam_admin.html
+++ b/src/main/resources/templates/bam/bam_admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="/common/header :: head(${title})"></head>
 <!--STYLESHEET-->
 <!--=================================================-->
@@ -495,9 +495,10 @@
 
                             <!-- Dropdown footer -->
                             <div class="pad-all text-right">
-                                <a href="pages-login.html" class="btn btn-primary">
+                                <a href="#" class="btn btn-primary">
                                     <i class="demo-pli-unlock"></i> Logout
                                 </a>
+
                             </div>
                         </div>
                     </li>
@@ -842,7 +843,7 @@
                                             <span class="pull-right dropdown-toggle">
                                                 <i class="dropdown-caret"></i>
                                             </span>
-                                        <p class="mnp-name">Aaron Chavez</p>
+                                        <p class="mnp-name" sec:authentication="name">Aaron Chavez</p>
                                         <span class="mnp-desc">aaron.cha@themeon.net</span>
                                     </a>
                                 </div>
@@ -856,7 +857,12 @@
                                     <a href="#" class="list-group-item">
                                         <i class="demo-pli-information icon-lg icon-fw"></i> Help
                                     </a>
-                                    <a href="#" class="list-group-item">
+                                    <!--<form th:action="@{/logout}" method="post">-->
+
+                                        <!--<input type="hidden" name="${_csrf.parameterName }" value="${_csrf.token }"/>-->
+                                        <!--<input type="submit" value="Sign Out"/>-->
+                                    <!--</form>-->
+                                    <a th:href="@{/logout}" class="list-group-item">
                                         <i class="demo-pli-unlock icon-lg icon-fw"></i> Logout
                                     </a>
                                 </div>
